// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiEmptyPrompt is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge testClass1 testClass2 css-xa248o-euiPanel-grow-m-transparent"
  data-test-subj="test subject string"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__icon"
    >
      <span
        color="subdued"
        data-euiicon-type="arrowUp"
      />
    </div>
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <h2
          class="euiTitle css-1w464ad-euiTitle-m"
        >
          Title
        </h2>
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiSpacer euiSpacer--m css-jv9za2-euiSpacer-m"
          />
          <div
            class="euiText euiText--medium"
          >
            <p>
              Body
            </p>
          </div>
        </span>
        <div
          class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
        />
        <div>
          Actions
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props actions renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <div
          class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
        />
        actions
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props actions renders an array 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <div
          class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive euiEmptyPrompt__actions"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            action1
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            action2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props body renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiText euiText--medium"
          >
            body
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color accent is rendered 1`] = `
<div
  class="euiPanel euiPanel--accent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-tebn50-euiPanel-grow-m-accent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color danger is rendered 1`] = `
<div
  class="euiPanel euiPanel--danger euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-71cwnp-euiPanel-grow-m-danger"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color plain is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-n9us4v-euiPanel-grow-m-plain-hasShadow"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color primary is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-rek6a7-euiPanel-grow-m-primary"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color subdued is rendered 1`] = `
<div
  class="euiPanel euiPanel--subdued euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-z6lae6-euiPanel-grow-m-subdued"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color success is rendered 1`] = `
<div
  class="euiPanel euiPanel--success euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-1arvkck-euiPanel-grow-m-success"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color transparent is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props color warning is rendered 1`] = `
<div
  class="euiPanel euiPanel--warning euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-1xp0aox-euiPanel-grow-m-warning"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props footer renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
  <div
    class="euiEmptyPrompt__footer"
  >
    footer
  </div>
</div>
`;

exports[`EuiEmptyPrompt props icon renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__icon"
    >
      <span>
        Custom icon
      </span>
    </div>
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props iconType renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__icon"
    >
      <span
        color="subdued"
        data-euiicon-type="arrowUp"
      />
    </div>
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props iconType renders with iconColor 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__icon"
    >
      <span
        color="danger"
        data-euiicon-type="arrowUp"
      />
    </div>
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props layout renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--horizontal euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize l is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize m is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingMedium css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize none is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props paddingSize s is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingSmall css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props styles are rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
  style="background:yellow;min-width:200px;max-width:600px"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      />
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props title renders alone 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge css-xa248o-euiPanel-grow-m-transparent"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiEmptyPrompt__content"
    >
      <div
        class="euiEmptyPrompt__contentInner"
      >
        <div
          class="euiTitle css-1w464ad-euiTitle-m"
        >
          title
        </div>
      </div>
    </div>
  </div>
</div>
`;
